--- a/_posts/2020-12-26-c4.markdown
+++ b/_posts/2020-12-26-c4.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "C4 Modeling of Software Architectur"
+title:  "C4 Modeling of Software Architecture"
 date:   2020-12-25
 categories: jekyll blog blogging
 ---
