--- a/_posts/2020-12-26-c4.markdown
+++ b/_posts/2020-12-26-c4.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "C4 Modeling of Software Architecture"
 date:   2020-12-26
-categories: jekyll blog blogging
+categories: architecture software C4
 ---
 
 # What Does a System Look Like?
