--- a/_posts/2020-12-27-s3-site.markdown
+++ b/_posts/2020-12-27-s3-site.markdown
@@ -70,7 +70,7 @@ didn't you? It's really a good idea even if you have access to AWS at work.
 OK, so back to the administrator:
 
 1. Use the AWS S3 console to [create a new bucket and make it public](https://docs.aws.amazon.com/AmazonS3/latest/user-guide/static-website-hosting.html).
-Note that you have to put a policy on the bucket to allow public access. My bucket is byzantinegeek-blog-architecture.
+Note that you have to put a policy on the bucket to allow public access. My bucket is architecture.byzantinegeek.com.
 2. Clone the site from github: 
 <br/>
 `$ git clone git@github.com:njtimgeorge/njtimgeorge.github.io.git`
@@ -81,8 +81,8 @@ Note that you have to put a policy on the bucket to allow public access. My buck
 `$ ./util/build.sh`
 4. Copy it to the bucket:
 <br/>
-`$ aws s3 cp --recursive . s3://byzantinegeek-blog-architecture/`
-5. [Check it out.](http://byzantinegeek-blog-architecture.s3-website-us-east-1.amazonaws.com/)
+`$ aws s3 cp --recursive . s3://architecture.byzantinegeek.com/`
+5. [Check it out.](http://architecture.byzantinegeek.com.s3-website-us-east-1.amazonaws.com/)
 
 # Follow-on Work
 
